Introduce separate structs for feed requests and responses
