# docs/swagger.json
@@ -24,7 +24,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.Feed"
+                                "$ref": "#/definitions/response.Feed"
                             }
                         }
                     }
@@ -49,7 +49,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.CreateFeedRequest"
+                            "$ref": "#/definitions/request.Feed"
                         }
                     }
                 ],
@@ -57,7 +57,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/model.Feed"
+                            "$ref": "#/definitions/response.Feed"
                         }
                     }
                 }
@@ -88,7 +88,7 @@
         }
     },
     "definitions": {
-        "model.CreateFeedRequest": {
+        "request.Feed": {
             "type": "object",
             "required": [
                 "url"
@@ -99,7 +99,7 @@
                 }
             }
         },
-        "model.Feed": {
+        "response.Feed": {
             "type": "object",
             "properties": {
                 "id": {
