# model/feed.go
@@ -6,13 +6,11 @@ import (
 	"time"
 )
 
-// Feed is a model for a podcast feed
-// @model Feed
 type Feed struct {
-	ID        uuid.UUID `json:"id" gorm:"type:uuid;primaryKey"`
-	CreatedAt time.Time `json:"-"`
-	UpdatedAt time.Time `json:"-"`
-	URL       string    `json:"url"`
+	ID        uuid.UUID `gorm:"type:uuid;primaryKey"`
+	CreatedAt time.Time
+	UpdatedAt time.Time
+	URL       string
 }
 
 func (feed *Feed) BeforeCreate(_ *gorm.DB) (err error) {
@@ -22,10 +20,4 @@ func (feed *Feed) BeforeCreate(_ *gorm.DB) (err error) {
 	}
 
 	return nil
-}
-
-// CreateFeedRequest is a model for a request to create a new feed
-// @model CreateFeedRequest
-type CreateFeedRequest struct {
-	URL string `json:"url" validate:"required,url"`
 }
